main/logs/20240615_180440_GORT_log.txt
OpenCV: not authorized to capture video (status 0), requesting...
OpenCV: camera failed to properly initialize!
Info.plist file not found.
4.8.1
 * Serving Flask app 'person_finder'
 * Debug mode: off
Traceback (most recent call last):
  File "/Users/streamer/Documents/python_code/Gort/tracking_cam/main/person_finder.py", line 283, in <module>
    frame = cv2.resize(frame, (640,480), interpolation=cv2.INTER_CUBIC)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.8.1) /Users/xperience/GHA-OpenCV-Python/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/resize.cpp:4062: error: (-215:Assertion failed) !ssize.empty() in function 'resize'

